--- a/css/style.css
+++ b/css/style.css
@@ -491,6 +491,14 @@
     flex-direction: column; /* Menjadikan konten menjadi kolom */
     justify-content: center; /* Mengatur konten secara vertikal di tengah */
     align-items: center; /* Mengatur konten secara horizontal di tengah */
+    transition: transform 0.5s ease; /* Animasi ketika hovering */
+}
+
+/* Animasi untuk desktop */
+@media (min-width: 768px) {
+    .single-cool-product:hover {
+        transform: translateY(-5px); /* Mendorong sedikit ke atas saat hovering */
+    }
 }
 
 .product-image {
@@ -499,12 +507,25 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
 }
 
 .product-image img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain; /* Gambar akan menyesuaikan ukurannya tetapi tetap mempertahankan aspek rasio */
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Gambar akan di-stretch untuk mengisi seluruh area */
+    transition: transform 0.5s ease; /* Animasi ketika hovering */
+}
+
+/* Animasi untuk perangkat seluler */
+@media (max-width: 767px) {
+    .single-cool-product:active {
+        transform: translateY(-5px); /* Mendorong sedikit ke atas saat ditekan */
+    }
+
+    .product-image img:active {
+        transform: scale(1.1); /* Memperbesar gambar saat ditekan */
+    }
 }
 
 .product-details {
@@ -525,6 +546,7 @@
     background-color: #0056b3;
 }
 /* Medali End */
+
 
 
 
