--- a/css/style.css
+++ b/css/style.css
@@ -471,9 +471,7 @@
 
 /* Medali Start */
 .cool-store-section {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
+    padding: 50px 0;
 }
 
 .product-grid {
