--- a/css/style.css
+++ b/css/style.css
@@ -593,12 +593,15 @@
     animation: fadeIn 1s ease-in-out;
 }
 
-.testimonial-item img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin-bottom: 10px;
+.testimonial-image img {
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 10px;
+    object-fit: cover;
 }
+
 
 .testimonial-item h3 {
     font-size: 18px;
