--- a/css/style.css
+++ b/css/style.css
@@ -575,6 +575,19 @@
     }
 }
 
+/* Testimonial Section Product */
+/* Animasi testimoni */
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 /* Testimonial */
 .testimonial-container {
     display: flex;
